reactjs-application/react-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: LoadBalancer
  selector:
    app: react-deployment
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
