reactjs-application/react-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - react.vamsiawstraining.com
    secretName: react-tls
  rules:
  - host: react.vamsiawstraining.com
    http:
      paths:
      - path: /
        backend:
          serviceName: react-service
          servicePort: 80
